--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -300,10 +300,10 @@ footer,
     .q-item.tx-snode,
     .q-item.tx-gov {
         .amount span {
-            color: #A262FB;
+            color: #02a754;
             &:before {
                 content: "+";
-                color: #A262FB;
+                color: #02a754;
             }
         }
     }
@@ -472,7 +472,7 @@ footer,
     }
 
     .primary-address {
-        background: #6A75F9 !important;
+        background: #02a754 !important;
 
         .q-item, .q-item-side {
             color: white;
@@ -610,7 +610,7 @@ footer,
 
 .check-transaction {
     .good {
-        color: #A262FB;
+        color: #02a754;
     }
 
     .bad {
