--- a/src/css/themes/common.variables.styl
+++ b/src/css/themes/common.variables.styl
@@ -19,14 +19,14 @@ $secondary = $loki-black-90
 $tertiary  = $loki-black-80
 
 $neutral   = #E0E1E2
-$positive  = #A262FB
+$positive  = #02d76c
 $negative  = #DB2828
 $info      = #31CCEC
 $warning   = #F2C037
 
-$loki-green = linear-gradient(180deg, #2EAAF4 0%, #6A75F9 100%)
-$loki-green-solid = #2EAAF4;
-$loki-green-dark-solid = #6A75F9;
+$loki-green = linear-gradient(180deg, #01bcb4 0%, #02d76c 100%)
+$loki-green-solid = #02d76c;
+$loki-green-dark-solid = #02a754;
 
 $loki-black-90 = #0A0A0A
 $loki-black-80 = #252525
